@@ -1515,8 +1515,8 @@ IDR_MAINFRAME           ICON                    "res\\TeamTalk.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 5,6,0,5002
- PRODUCTVERSION 5,6,0,5002
+ FILEVERSION 5,6,0,5001
+ PRODUCTVERSION 5,6,0,5001
  FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -1533,12 +1533,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "BearWare.dk"
             VALUE "FileDescription", "TeamTalk voice conferencing client"
-            VALUE "FileVersion", "5, 6, 0, 5002"
+            VALUE "FileVersion", "5, 6, 0, 5001"
             VALUE "InternalName", "TeamTalk5.exe"
             VALUE "LegalCopyright", "Copyright (c) 2005-2018, BearWare.dk.  All rights reserved."
             VALUE "OriginalFilename", "TeamTalk5.exe"
             VALUE "ProductName", "BearWare.dk TeamTalk"
-            VALUE "ProductVersion", "5, 6, 0, 5002"
+            VALUE "ProductVersion", "5, 6, 0, 5001"
         END
     END
     BLOCK "VarFileInfo"
@@ -2293,7 +2293,6 @@ BEGIN
     IDS_TTDLLVERS           "TeamTalk 32-bit DLL version: "
     IDS_RXTXPING            "RX: %.2fKB TX: %.2fKB PING: %u %s"
     IDS_RXTX                "RX: %.2fKB TX: %.2fKB %s"
-    IDS_AWAY                "Away"
 END
 
 STRINGTABLE
