@@ -989,15 +989,30 @@ CString CSessionTreeCtrl::GetUserText(int nUserID) const
     {
         User user = ite->second;
         szText = GetDisplayName(user);
-
         if(_tcslen(user.szStatusMsg)>0)
         {
             CString szMsg = user.szStatusMsg;
-            if(!szMsg.IsEmpty())
-                szText = szText + _T("  (") + szMsg + _T(")");
-        }
+            if(!szMsg.IsEmpty()) {
+                szText = szText + _T(" - ") + szMsg;
+            }
     }
-    return LimitText(szText);
+            if(user.nStatusMode == STATUSMODE_AWAY) {
+                szText = szText + _T(" (") + LoadText(IDS_USERISAWAY, _T("Away")) + _T(")");
+            }
+            else if(user.nStatusMode == STATUSMODE_QUESTION) {
+                szText = szText + _T(" (") + LoadText(IDS_USERISQUESTION, _T("Question")) + _T(")");
+            }
+            else if(user.nStatusMode == STATUSMODE_STREAM_MEDIAFILE) {
+                szText = szText + _T(" (") + LoadText(IDS_USERISSTREAMINGMDFILE, _T("Streaming media file")) + _T(")");
+            }
+            else if(user.nStatusMode == STATUSMODE_AWAY + STATUSMODE_STREAM_MEDIAFILE) {
+                szText = szText + _T(" (") + LoadText(IDS_USERISAWAY, _T("Away")) + _T(") (") + LoadText(IDS_USERISSTREAMINGMDFILE, _T("Streaming media file")) + _T(")");
+            }
+            else if(user.nStatusMode == STATUSMODE_QUESTION + STATUSMODE_STREAM_MEDIAFILE) {
+                szText = szText + _T(" (") + LoadText(IDS_USERISQUESTION, _T("Question")) + _T(") (") + LoadText(IDS_USERISSTREAMINGMDFILE, _T("Streaming media file")) + _T(")");
+            }
+    }
+                return LimitText(szText);
 }
 
 CString CSessionTreeCtrl::GetChannelText(int nChannelID) const
