@@ -14,6 +14,11 @@ Accessible Windows client
 - French, Turkish, German and Chinese languages updated.
 - All areas of main window are now labelled
 - Slider's control is now more natural, you must use down arrow to decrease value, and up arrow to increase value
+- Changing behavior of displaying status-mode
+ - Status mode is now displaying for 3 status (Away, Question, and Streaming media file)
+ - Away is displaying when you switch automatically to this mode due to your inactivity, and also when you manually switch to this mode
+ - Status mode is now displaying in receiver side (after your status message), it's not your client who return your status mode message
+ - Status message is now displaying after a hyphen, it's uniformizing behavior with QT client
 Default Qt client
 - Removed duplex mode for sound devices
 - Sound system Windows Audio Session now uses Windows' own echo cancellor, AGC and noise suppression
